[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/platformer/characters/RunParticles.gd" type="Script" id=1]
[ext_resource path="res://sprites/dustparticle.png" type="Texture" id=2]
[ext_resource path="res://audio/sfx/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/platformer/characters/Player.gd" type="Script" id=4]
[ext_resource path="res://scenes/CameraFCandidate.gd" type="Script" id=5]
[ext_resource path="res://scenes/platformer/characters/PlayerAnims.gd" type="Script" id=7]
[ext_resource path="res://sprites/characters/Gex.png" type="Texture" id=9]
[ext_resource path="res://audio/sfx/player-hurt.wav" type="AudioStream" id=10]
[ext_resource path="res://scenes/CoinInventoryHandle.tscn" type="PackedScene" id=11]
[ext_resource path="res://shaders/hit_flash.gdshader" type="Shader" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.5, 27 )

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 12 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Animation" id=18]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "Jump"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 7, 8, 9, 10, 11 ]
}

[sub_resource type="AudioStreamRandomPitch" id=14]
audio_stream = ExtResource( 10 )
random_pitch = 1.5

[node name="Gex" type="KinematicBody2D" groups=["Player"]]
z_index = 1
collision_mask = 15
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 15 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
hframes = 6
vframes = 2

[node name="Anims" type="AnimationPlayer" parent="Sprite"]
autoplay = "Idle"
anims/Idle = SubResource( 18 )
anims/Jump = SubResource( 19 )
anims/RESET = SubResource( 16 )
anims/Run = SubResource( 17 )
script = ExtResource( 7 )

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 3 )
volume_db = -12.0
bus = "sfx"

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = SubResource( 14 )

[node name="Tween" type="Tween" parent="."]

[node name="HitFlashTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="CoinInventoryHandle" parent="." instance=ExtResource( 11 )]

[node name="RunParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 30 )
amount = 6
lifetime = 0.6
local_coords = false
texture = ExtResource( 2 )
spread = 180.0
gravity = Vector2( 0, -80 )
initial_velocity = 40.0
initial_velocity_random = 0.2
angular_velocity = 30.0
angular_velocity_random = 1.0
angle = 90.0
angle_random = 1.0
scale_amount = 0.75
color = Color( 1, 1, 1, 0.784314 )
script = ExtResource( 1 )

[node name="CameraFollower" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="timeout" from="HitFlashTimer" to="." method="_end_flash_sprite"]
